# succession

./: .gitignore  Pipfile  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: toxtests.yml
docs/: Successfile  build_from_repo.sh  conf.py  index.rst  modules.rst  succession.rst  usage.rst
examples/: count_to_four.Successfile  count_to_four.py
succession/: cli.py  exceptions.py  filefilter.py  job.py  prelude.py  registry.py  shell.py
tests/: test_cli.py  test_filefilter.py  test_job.py  test_registry.py  test_shell.py
